--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.2",
     "@aws-sdk/client-bedrock-runtime": "3.658",
+    "@aws-sdk/client-bedrock-agent-runtime": "3.658",
     "aws-amplify": "^6.6.3",
     "aws-sdk": "^2.1691.0",
     "classnames": "^2.5.1",
